11 de septiembre 3:45pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -167,7 +167,7 @@
 
     \subsection{Propuesta de la Arquitectura IoT del Sistema}
 
-    En base de los esquemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas.\\
+    En base de los es quemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas.\\
     
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.1.1\hspace{5mm}Vista funcional}
         \textbf{1.3.1.1\hspace{5mm}Vista funcional}
@@ -315,7 +315,19 @@
 
     En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.\\
 
-    Valores de temperatura idóneos para la aparición de xilófagos...\\\\
+    Valores de temperatura idóneos para la aparición de xilófagos...
+
+    \section{Condiciones medioambientales...} \label{sec: condiciones_medioambientales}
+
+
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=16cm, height=5cm]{imagenes/gráfica_comparativa_variables_medioambientales.png}
+        \caption{Correlación de valores medioambientales}
+        \subcaption*{Fuente: Elaboración propia}
+        \label{imag:grafica_condiciones_medioambientales}
+    \end{figure}
+
 
     %\section{Sistema de control de población}\label{sec: sistemaPoblacion}
     %Sensores PIR\\
