--- a/capitulos/dedicatoria.tex
+++ b/capitulos/dedicatoria.tex
@@ -1,7 +1,6 @@
 \section*{}
-\pagestyle{empty}
+
 \vfill
-%Página de dedicatoria
     \begin{flushright}
         \textit{
         Dedico este trabajo a Dios por haberme permitido llegar hasta aquí.\\
@@ -9,4 +8,7 @@
         A mi prometida.\\
         A mi tutor.\\
         A mis amigos y a mis compañeros de estudio.
-    }\end{flushright}
+    }
+\end{flushright}
+
+\pagestyle{empty}
