--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -1,3 +1,4 @@
+\renewcommand{\thepage}{\arabic{page}}
 \begin{center}
     \section*{\LARGE Introducción}
     \addcontentsline{toc}{section}{INTRODUCCIÓN} %Para que no salga el numero de la seccion en el indice
