--- a/ref.bib
+++ b/ref.bib
@@ -542,3 +542,9 @@ Internet of things CISCO
   pages           = {14-25}
 }
 
+@article{ripa2004termitas,
+  title={Termitas y otros insectos xil{\'o}fagos en Chile: especies, biolog{\'\i}a y manejo.},
+  author={Ripa, Renato and Luppichini, Paola and Krecek, Jan and Lenz, Michael and Creffield, Jim W and others},
+  year={2004},
+  publisher={Instituto de Investigaciones Agropecuarias (Chile). La Cruz}
+}
