11 de septiembre 4:30pm

--- a/capitulos/carátula2.tex
+++ b/capitulos/carátula2.tex
@@ -1,5 +1,7 @@
 \thispagestyle{empty}
 
+\marginsize{3cm}{2cm}{2cm}{2cm} 
+
 \begin{figure}[h]
     \centering
     \includegraphics[width=15cm, height=2cm]{imagenes/identidad en blanco y negro.jpg}
