--- a/capitulos/pagina_firmas.tex
+++ b/capitulos/pagina_firmas.tex
@@ -9,19 +9,19 @@
 
 Hago constar que el presente Trabajo de Diploma fue realizado en la Universidad de Oriente como parte de la culminación de estudios de la especialidad de Ingeniería en Automática, autorizando a que el mismo sea utilizado por la Institución para los fines que estime convenientes, tanto de forma parcial como total, y que además no podrá ser presentado en eventos, ni publicados sin autorización de la Universidad.\\
 
-\begin{center}
-    \rule{11cm}{1pt}
-    \newline
-    Nombre y firma del autor\\
-\end{center}
+\hspace{2.5cm}
+\rule{11cm}{1pt}
+
+\hspace{6cm}
+Nombre y firma del autor\\
 
 Los abajo firmantes certificamos que el presente trabajo ha sido realizado según acuerdo de la dirección de nuestro centro y el mismo cumple con los requisitos que debe tener un trabajo de esta envergadura referido a la temática señalada.\\
 
-\begin{center}
-    \rule{11cm}{1pt}
-    \newline
-    Nombre y firma del autor\\
-\end{center}
+\hspace{2.5cm}
+\rule{11cm}{1pt}
+
+\hspace{6cm}
+Nombre y firma del autor\\
 
 \vspace{1.5cm}
 
