--- a/caratula.tex
+++ b/caratula.tex
@@ -1,18 +1,12 @@
-\begin{titlepage}
-    % \centering
-    % \newgeometry{left=0.1mm,bottom=0.1mm,top=25.5mm}
-    % \parbox[s]{500pt}{
-    %     \vspace{-27mm}
-    %     \includegraphics[width=9cm,height=30cm]{imagenes/a1.jpg}
-    %         \hspace{3cm}
-    %         \includegraphics[width=5cm,height=5cm]{imagenes/identidad.jpg}
-    % }
-
-    \centering
-    \textbf{Aquí va la carátula}
-\end{titlepage}
-
 \setcounter{page}{0} %Establece el contador de los numeros de las paginas 
     \pagestyle{plain}
 
 \pagestyle{empty}
+
+\marginsize{0.1mm}{0.1mm}{0.1mm}{0.1mm} 
+
+\begin{figure}[ht!]
+    \begin{flushleft}
+        \includegraphics[width=8cm, height=20cm]{imagenes/a1.jpg}
+    \end{flushleft}
+\end{figure}
