--- a/tesis.tex
+++ b/tesis.tex
@@ -14,15 +14,17 @@
 \usepackage{subcaption}
 \usepackage{enumerate} %enumeraciones
 \usepackage{apacite}
-% \usepackage{geometry}
+\usepackage{geometry}
 \usepackage{float}
+\usepackage{anysize}
 \usepackage{wrapfig}
 \usepackage[T1]{fontenc}
 \usepackage[scaled]{uarial}
 \renewcommand*\familydefault{\sfdefault}
 \renewcommand{\cftfigfont}{Figura}
 \renewcommand{\cfttabfont}{Tabla}
-\usepackage[left=2.54cm, right=2.54cm, top=2.54cm, bottom=2.54cm]{geometry} %Márgen
+
+% \usepackage[left=2.54cm, right=2.54cm, top=2.54cm, bottom=2.54cm]{geometry} %Márgen
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
