13 de septiembre 9:00am

--- a/capitulos/abstract.tex
+++ b/capitulos/abstract.tex
@@ -1,16 +1,13 @@
 % \renewcommand{\thepage}{\roman{page}}
 \setcounter{page}{5}
-\thispagestyle{empty}
+\thispagestyle{plain}
 
 \addcontentsline{toc}{section}{Abstract}
-    \textbf{\Large Abstract}
+    \textbf{\textit{\Large Abstract}}
     \newline
 
-This Diploma Work deals with the design and installation process of a monitoring and visualization system of the variables for the control of the state of conservation of the pieces belonging to the Prat Puig sample located in the Office of the Historian of the province of Santiago de Cuba. Generalities about the application of the IoT in museums at an international level and in Cuba are discussed. A characterization of the sensors to be used for control is carried out, as well as the assembly of a security system.\\
-In accordance with the characteristics of the place, the assembly of said system is carried out, facilitating the control of the state of the pieces and providing the center's specialists with the necessary data for decision-making in the face of future events. This system can be used in subsequent projects related to the supervision of objects, facilitating the visualization of their status and early warning in the event of possible effects.
+    \textit{This Diploma Work deals with the design and installation process of a monitoring and visualization system of the variables for the control of the state of conservation of the pieces belonging to the Prat Puig sample located in the Office of the Historian of the province of Santiago de Cuba. Generalities about the application of the IoT in museums at an international level and in Cuba are discussed. A characterization of the sensors to be used for control is carried out, as well as the assembly of a security system.\\
+    In accordance with the characteristics of the place, the assembly of said system is carried out, facilitating the control of the state of the pieces and providing the center's specialists with the necessary data for decision-making in the face of future events. This system can be used in subsequent projects related to the supervision of objects, facilitating the visualization of their status and early warning in the event of possible effects.}
 
-\vfill
 
-\begin{flushleft}
-    \textbf{Keywords: }
-\end{flushleft}
+    \textbf{\textit{Key-Words:} }
