--- a/capitulos/apendix.tex
+++ b/capitulos/apendix.tex
@@ -1,4 +1,4 @@
 \begin{center}
-    \section*{\LARGE Apéndice}    
+    \section*{\LARGE Anexos}    
 \end{center}
-\addcontentsline{toc}{chapter}{Apéndice}
+\addcontentsline{toc}{chapter}{Anexos}
