--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -398,4 +398,4 @@ The RT9013 consumes typical 0.7uA in shutdown mode and has fast turn-on time les
 
 
 \addcontentsline{toc}{section}{Conclusiones}
-        \textbf{\Large Conclusiones... parciales}\newline
+        \textbf{\Large Conclusiones}\newline
