--- a/capitulos/carátula2.tex
+++ b/capitulos/carátula2.tex
@@ -1,6 +1,6 @@
 \thispagestyle{empty}
 
-\marginsize{3cm}{2cm}{2cm}{2cm} 
+% \marginsize{2.54cm}{2.54cm}{2.54cm}{2.54cm} 
 
 \begin{figure}[h]
     \centering
@@ -23,15 +23,14 @@
     \vspace{0.5cm}
 
     \textbf{\large Autor\\
-    (Escribir autor aquí)}
+    Miguel Á. Zayas Barbán}
     \vspace{0.5cm}
 
-    \textbf{\large Tutor(es)\\
-    (Escribir tutor o tutores aquí: Categoría científica y nombre\\
-    completo)}
+    \textbf{\large Tutor\\
+    M.Sc. Angel Antonio Ravelo Batista}
 
     \vfill
-
-    \textbf{\large Mes, 2022}
-
+    \textbf{\large Diciembre, 2022}   
 \end{center}
+
+ 
