--- a/capitulos/indice3.tex
+++ b/capitulos/indice3.tex
@@ -1,7 +1,7 @@
 \listoftables
 
 \setcounter{page}{3}
-\thispagestyle{empty}
+\thispagestyle{plain}
 
 % \renewcommand{\thepage}{\roman{page}}
 \addcontentsline{toc}{section}{Índice de tablas}
