--- a/caratula.tex
+++ b/caratula.tex
@@ -1,12 +1,13 @@
-\setcounter{page}{0} %Establece el contador de los numeros de las paginas 
-    \pagestyle{plain}
-
 \pagestyle{empty}
 
-\marginsize{0.1mm}{0.1mm}{0.1mm}{0.1mm} 
+% \marginsize{0.1mm}{0.1mm}{0.1mm}{0.1mm}| 
 
-\begin{figure}[ht!]
-    \begin{flushleft}
-        \includegraphics[width=8cm, height=20cm]{imagenes/a1.jpg}
-    \end{flushleft}
-\end{figure}
+% \begin{figure}[ht!]
+%     \begin{flushleft}
+%         \includegraphics[width=9cm, height=29.6cm]{imagenes/a1.jpg}
+%     \end{flushleft}
+% \end{figure}
+
+\begin{center}
+    \textbf{Aquí va la carátula}
+\end{center}
