--- a/capitulos/indice2.tex
+++ b/capitulos/indice2.tex
@@ -1,7 +1,7 @@
 \listoffigures
 
 \setcounter{page}{2}
-\thispagestyle{empty}
+\thispagestyle{plain}
 
 % \renewcommand{\thepage}{\roman{page}}
 \addcontentsline{toc}{section}{Índice de figuras}
