--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -3,4 +3,4 @@
     \textbf{\Large Listado de símbolos, términos especiales y abreviaturas no normalizadas}\newline
 
     \setcounter{page}{1}
-    \pagestyle{empty}
+    \thispagestyle{plain}
